# inch

./: README.md  pyproject.toml
src/inch/: __init__.py  __main__.py  async_example.py  core.py  executor.py  func_inch.py
src/inch/processor/: __init__.py  async_executor.py  async_func_inch.py  async_inch.py  inch_processor.py  logger.py
src/inch/type/: __init__.py
